--- a/package.json
+++ b/package.json
@@ -300,6 +300,7 @@
     "clipboardy": "^2.3.0",
     "fs-extra": "^9.0.1",
     "get-port": "^4.2.0",
+    "ps-tree": "^1.2.0",
     "vscode-jsonrpc": "^5.0.1",
     "vscode-languageclient": "^6.1.3",
     "vscode-languageserver-protocol": "^3.13.0",
